classDiagram
    %% Manual Summary (US1) - Full-Stack Class Diagram

    class ManualSummary {
        +Message[] messages
        +Function onClose
        +Boolean isOpen
        +Number selectedHours
        +Boolean isLoading
        +String error
        +SummaryData summaryData
        +handleGenerateSummary()
        +handleTimeRangeChange()
        +handleClose()
    }

    class apiService {
        +generateManualSummary(channelId, options) Promise~SummaryData~
    }

    class SummaryService {
        +generateManualSummary(options) Promise~SummaryData~
        +generatePreview(options) Promise~PreviewData~
        -_fetchMessages(options) Promise~FetchResult~
    }

    class SummarizationProvider {
        +summarize(messages, authorMap) Promise~SummarizeResult~
        +preview(messages, authorMap) Promise~string~
        -_extractTopics(messages) string[]
        -_buildOverview(messages, authorMap, topics, qCount, dCount) string
    }

    class SummaryData {
        +String overview
        +String[] keyTopics
        +Object[] mostActiveUsers
        +Object[] importantMessages
        +String timeframe
        +Object stats
    }

    class Message {
        +String id
        +String content
        +String author_id
        +String channel_id
        +String dm_id
        +Timestamp timestamp
        +Boolean edited
    }

    class User {
        +String id
        +String username
        +String display_name
        +String email
        +String avatar
        +String status
    }

    class AppContext {
        +User[] users
        +Message[] messages
        +Server[] servers
        +Channel[] channels
        +Object currentUser
    }

    %% Frontend relationships
    ManualSummary --> apiService : calls
    ManualSummary --> AppContext : reads context
    ManualSummary --> SummaryData : displays

    %% Backend relationships
    apiService ..> SummaryService : HTTP POST
    SummaryService --> SummarizationProvider : delegates summarisation
    SummaryService ..> SummaryData : produces
    SummarizationProvider --> Message : processes
    Message --> User : author_id FK
